// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should accept width and height props 1`] = `
Array [
  <img
    alt=""
    className="makeStyles-notVisible-2"
    height={750}
    onError={[Function]}
    onLoad={[Function]}
    src="http://asd.com"
    width={500}
  />,
  <img
    alt=""
    className="makeStyles-noImage-1 makeStyles-visible-3"
    height={750}
    width={500}
  />,
]
`;

exports[`Image should change visible image after loading 1`] = `
Array [
  <img
    alt=""
    className="makeStyles-notVisible-2"
    height={400}
    onError={[Function]}
    onLoad={[Function]}
    src="http://asd.com"
    width={300}
  />,
  <img
    alt=""
    className="makeStyles-noImage-1 makeStyles-visible-3"
    height={400}
    width={300}
  />,
]
`;

exports[`Image should change visible image after loading 2`] = `
Array [
  <img
    alt=""
    className="makeStyles-visible-3"
    height={400}
    onError={[Function]}
    onLoad={[Function]}
    src="http://asd.com"
    width={300}
  />,
  <img
    alt=""
    className="makeStyles-noImage-1 makeStyles-notVisible-2"
    height={400}
    width={300}
  />,
]
`;

exports[`Image should keep fallback image if image not loaded 1`] = `
Array [
  <img
    alt=""
    className="makeStyles-notVisible-2"
    height={400}
    onError={[Function]}
    onLoad={[Function]}
    src="http://asd.com"
    width={300}
  />,
  <img
    alt=""
    className="makeStyles-noImage-1 makeStyles-visible-3"
    height={400}
    width={300}
  />,
]
`;

exports[`Image should keep fallback image if image not loaded 2`] = `
Array [
  <img
    alt=""
    className="makeStyles-notVisible-2"
    height={400}
    onError={[Function]}
    onLoad={[Function]}
    src="http://asd.com"
    width={300}
  />,
  <img
    alt=""
    className="makeStyles-noImage-1 makeStyles-visible-3"
    height={400}
    width={300}
  />,
]
`;

exports[`Image should render correctly 1`] = `
Array [
  <img
    alt=""
    className="makeStyles-notVisible-2"
    height={400}
    onError={[Function]}
    onLoad={[Function]}
    src="http://asd.com"
    width={300}
  />,
  <img
    alt=""
    className="makeStyles-noImage-1 makeStyles-visible-3"
    height={400}
    width={300}
  />,
]
`;
